# xenon1t_approximate_nuclear_recoil_likelihood

./: AUTHORS.rst  HISTORY.rst  LICENSE  README.md  README.rst  pyproject.toml  setup.py  setup_original.py  tasks.py
docs/: conf.py  index.rst  installation.rst  minimal_example.rst  usage.rst
examples/: SI_limit.ipynb  minimal.ipynb  minimal_limits.ipynb  xenon1t_limit.ipynb
xe_likelihood/: __init__.py  binwise_inference.py  cli.py  demo.py  hist2d.py  spectrum.py
xe_likelihood/data/ancillary_data/: dRdE_wimp_SI_50GeV_10-45.csv  dRdE_wimp_pion_100GeV_10-45.csv  xenon1t_1ty.csv
xe_likelihood/data/xe1t_nr_1ty_result/: XENON1T_binwise_NR_LL.json  XENON1T_binwise_NR_MM.json  threshold_using_lines_90pct.json
xe_likelihood/data/xent_nr_20ty_projection/: XENONnT_binwise_NR_MM.json
